# ideograph

./: README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: config.py  main.py  run.py
backend/src/models/: chat.py
backend/src/routes/: chat.py
backend/src/services/: chat_service.py
frontend/: .dockerignore  .gitignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/components/: ChatBubble.tsx  GraphNode.tsx
